<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainCard"
    android:layout_width="match_parent"
    android:layout_height="550dp"
    android:layout_margin="40dp"
    android:elevation="40dp"
    app:cardCornerRadius="40dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/liveCV"
            android:layout_width="45dp"
            android:layout_height="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/red"
            app:cardCornerRadius="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/live"
                android:textAlignment="center"
                android:textColor="@color/white" />

        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/imgArticle"
            android:layout_width="250dp"
            android:layout_height="100dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="20dp"
            android:scaleType="centerCrop"
            android:src="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/liveCV" />


        <TextView
            android:id="@+id/titleTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:ellipsize="end"
            android:fontFamily="@font/nexa_bold"
            android:maxLines="6"
            android:minLines="2"
            android:text="@string/title"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgArticle"
            app:layout_goneMarginStart="5dp" />

        <TextView
            android:id="@+id/publishedAtTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/nexa_light"
            android:maxLines="1"
            android:text="@string/published_at"
            android:textAlignment="viewStart"
            android:textSize="11sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleTv" />

        <TextView
            android:id="@+id/publishedAtDataTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/nexa_bold"
            android:maxLines="1"
            android:text="@string/published_by"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/publishedAtTv" />

        <TextView
            android:id="@+id/descriptionTv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="10dp"
            android:ellipsize="end"
            android:fontFamily="@font/nexa_regular"
            android:text="@string/description"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:maxLines="8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/publishedAtDataTv" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/iconsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/iconSaved"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="40dp"
                android:visibility="invisible"
                android:layout_marginBottom="5dp"
                android:src="@drawable/baseline_bookmark_border_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iconDelete"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="5dp"
                android:src="@drawable/baseline_delete_24"
                app:circularflow_defaultRadius="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>